--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "node",
     "pallets/template",
     "pallets/check-membership",
+    "pallets/compounding-interest",
     "runtime",
 ]
 [profile.release]
