add reservable-currency pallet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "pallets/compounding-interest",
     "pallets/currency-imbalances",
     "pallets/simple-crowdfund",
+    "pallets/reservable-currency",
     "runtime",
 ]
 [profile.release]
