--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "pallets/currency-imbalances",
     "pallets/simple-crowdfund",
     "pallets/reservable-currency",
+    "pallets/lockable-currency",
     "runtime",
 ]
 [profile.release]
