--- a/pallets/check-membership/Cargo.toml
+++ b/pallets/check-membership/Cargo.toml
@@ -21,6 +21,7 @@ frame-system = { version = "4.0.0-dev", default-features = false, git = "https:/
 sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
 sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
 pallet-template = { path = '../template', default-features = false }
+account-set = { path = '../../traits/account-set', default-features = false }
 
 [dev-dependencies]
 sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
@@ -36,4 +37,5 @@ std = [
 	'sp-runtime/std',
 	'sp-std/std',
 	'pallet-template/std',
+	'account-set/std',
 ]
