add ringbuffer-queue pallet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "pallets/double-map",
     "pallets/randomness",
     "pallets/fixed-point",
+    "pallets/ringbuffer-queue",
     "runtime",
 ]
 [profile.release]
