--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "pallets/randomness",
     "pallets/fixed-point",
     "pallets/ringbuffer-queue",
+    "pallets/storage-cache",
     "runtime",
 ]
 [profile.release]
