--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "pallets/fixed-point",
     "pallets/ringbuffer-queue",
     "pallets/storage-cache",
+    "pallets/struct-storage",
     "runtime",
 ]
 [profile.release]
